Changelog
=========

0.3 (unreleased)
----------------

- Nothing changed yet.


0.2 (2011-10-13)
----------------

- Bugfix: calback was not called when the form is marked as
  processed. [vincent]


0.1 (2011-10-13)
----------------

- Initial release